--- a/config/automations/aqara_basement_office.yaml
+++ b/config/automations/aqara_basement_office.yaml
@@ -20,7 +20,7 @@
               value_template: '{{ trigger.event.data.command == "single" }}'
           sequence:
             - service: light.toggle
-              entity_id: light.zw_basement_desk_lamp
+              entity_id: light.zw_basement_desk_lamp_color
 
         # Double click
         - conditions:
@@ -37,6 +37,6 @@
               value_template: '{{ trigger.event.data.command == "hold" }}'
           sequence:
             - service: light.turn_off
-              entity_id: light.zw_basement_desk_lamp
+              entity_id: light.zw_basement_desk_lamp_color
             - service: light.turn_off
               entity_id: light.basement_office
