--- a/config/custom_components/monitor_docker/manifest.json
+++ b/config/custom_components/monitor_docker/manifest.json
@@ -1,8 +1,9 @@
 {
   "domain": "monitor_docker",
   "name": "Monitor Docker",
+  "version": "1.8",
   "documentation": "https://github.com/ualex73/monitor_docker",
   "issue_tracker": "https://github.com/ualex73/monitor_docker/issues",
-  "requirements": ["aiodocker==0.18.8", "python-dateutil==2.8.1"],
+  "requirements": ["aiodocker==0.19.1", "python-dateutil==2.8.1"],
   "codeowners": ["@ualex73"]
 }
