Format octoprint elapsed times

--- a/config/dashboards/ui-primary/views/docker.yaml
+++ b/config/dashboards/ui-primary/views/docker.yaml
@@ -33,10 +33,23 @@ cards:
               green: 0
               yellow: 20
               red: 40
-      - type: glance
-        show_name: false
-        entities:
-          - entity: sensor.docker_home_assistant_memory
+
+      - type: horizontal-stack
+        cards:
+        - type: glance
+          show_name: false
+          entities:
+            - entity: sensor.docker_home_assistant_memory
+        - type: button
+          name: Restart Home Assistant
+          icon: mdi:restart
+          icon_height: 50px
+          tap_action:
+            action: call-service
+            service: homeassistant.restart
+            confirmation:
+              text: Are you sure you want to restart Home Assistant?
+
       - type: entities
         entities:
           - entity: switch.docker_home_assistant
@@ -85,7 +98,7 @@ cards:
           - entity: sensor.docker_pi_hole_network_speed_up
           - entity: sensor.docker_pi_hole_network_speed_down
           - entity: sensor.docker_pi_hole_network_total_up
-          - entity: sensor.docker_pi_hole_network_total_up
+          - entity: sensor.docker_pi_hole_network_total_down
       - type: entities
         entities:
           - entity: switch.docker_pi_hole
@@ -134,7 +147,7 @@ cards:
           - entity: sensor.docker_splunk_network_speed_up
           - entity: sensor.docker_splunk_network_speed_down
           - entity: sensor.docker_splunk_network_total_up
-          - entity: sensor.docker_splunk_network_total_up
+          - entity: sensor.docker_splunk_network_total_down
       - type: entities
         entities:
           - entity: switch.docker_splunk
@@ -183,7 +196,7 @@ cards:
           - entity: sensor.docker_portainer_network_speed_up
           - entity: sensor.docker_portainer_network_speed_down
           - entity: sensor.docker_portainer_network_total_up
-          - entity: sensor.docker_portainer_network_total_up
+          - entity: sensor.docker_portainer_network_total_down
       - type: entities
         entities:
           - entity: switch.docker_portainer
