--- a/config/dashboards/ui-primary/dashboard.yaml
+++ b/config/dashboards/ui-primary/dashboard.yaml
@@ -3,10 +3,8 @@ views:
   - !include views/main.yaml
   - !include ../common-views/weather.yaml
   - !include views/indoor_climate.yaml
-  - !include views/cameras.yaml
+  - !include views/security.yaml
   - !include ../common-views/printer.yaml
-  - !include ../common-views/garage.yaml
   - !include ../common-views/climate.yaml
   - !include views/docker.yaml
   - !include views/tech.yaml
-  - !include views/smoke.yaml
