--- a/config/dashboards/ui-primary/views/tech.yaml
+++ b/config/dashboards/ui-primary/views/tech.yaml
@@ -2,6 +2,211 @@ title: Tech
 icon: 'mdi:chart-bell-curve-cumulative'
 path: tech
 cards:
+  - type: 'custom:vertical-stack-in-card'
+    title: Home Assistant
+    cards:
+      - type: horizontal-stack
+        cards:
+          - type: gauge
+            entity: sensor.docker_home_assistant_cpu
+            min: 0
+            max: 100
+            name: CPU (Cores)
+            severity:
+              green: 0
+              yellow: 20
+              red: 40
+          - type: gauge
+            entity: sensor.docker_home_assistant_1cpu
+            min: 0
+            max: 100
+            name: CPU (Overall)
+            severity:
+              green: 0
+              yellow: 20
+              red: 40
+          - type: gauge
+            entity: sensor.docker_home_assistant_memory_percent
+            min: 0
+            max: 100
+            name: Memory
+            severity:
+              green: 0
+              yellow: 20
+              red: 40
+
+      - type: horizontal-stack
+        cards:
+          - type: glance
+            show_name: false
+            entities:
+              - entity: sensor.docker_home_assistant_memory
+          - type: button
+            name: Restart Home Assistant
+            icon: mdi:restart
+            icon_height: 50px
+            tap_action:
+              action: call-service
+              service: homeassistant.restart
+              confirmation:
+                text: Are you sure you want to restart Home Assistant?
+
+      - type: entities
+        entities:
+          - entity: switch.docker_home_assistant
+            name: Home Assistant
+          - entity: sensor.docker_home_assistant_image
+            name: Image
+          - entity: sensor.docker_home_assistant_status
+            name: Status
+
+  - type: 'custom:vertical-stack-in-card'
+    title: Pi-Hole
+    cards:
+      - type: horizontal-stack
+        cards:
+          - type: gauge
+            entity: sensor.docker_pi_hole_cpu
+            min: 0
+            max: 100
+            name: CPU (Cores)
+            severity:
+              green: 0
+              yellow: 20
+              red: 40
+          - type: gauge
+            entity: sensor.docker_pi_hole_1cpu
+            min: 0
+            max: 100
+            name: CPU (Overall)
+            severity:
+              green: 0
+              yellow: 20
+              red: 40
+          - type: gauge
+            entity: sensor.docker_pi_hole_memory_percent
+            min: 0
+            max: 100
+            name: Memory
+            severity:
+              green: 0
+              yellow: 20
+              red: 40
+      - type: glance
+        show_name: false
+        entities:
+          - entity: sensor.docker_pi_hole_memory
+          - entity: sensor.docker_pi_hole_network_speed_up
+          - entity: sensor.docker_pi_hole_network_speed_down
+          - entity: sensor.docker_pi_hole_network_total_up
+          - entity: sensor.docker_pi_hole_network_total_down
+      - type: entities
+        entities:
+          - entity: switch.docker_pi_hole
+            name: Pi-Hole
+          - entity: sensor.docker_pi_hole_image
+            name: Image
+          - entity: sensor.docker_pi_hole_status
+            name: Status
+
+  - type: 'custom:vertical-stack-in-card'
+    title: Splunk
+    cards:
+      - type: horizontal-stack
+        cards:
+          - type: gauge
+            entity: sensor.docker_splunk_cpu
+            min: 0
+            max: 100
+            name: CPU (Cores)
+            severity:
+              green: 0
+              yellow: 20
+              red: 40
+          - type: gauge
+            entity: sensor.docker_splunk_1cpu
+            min: 0
+            max: 100
+            name: CPU (Overall)
+            severity:
+              green: 0
+              yellow: 20
+              red: 40
+          - type: gauge
+            entity: sensor.docker_splunk_memory_percent
+            min: 0
+            max: 100
+            name: Memory
+            severity:
+              green: 0
+              yellow: 20
+              red: 40
+      - type: glance
+        show_name: false
+        entities:
+          - entity: sensor.docker_splunk_memory
+          - entity: sensor.docker_splunk_network_speed_up
+          - entity: sensor.docker_splunk_network_speed_down
+          - entity: sensor.docker_splunk_network_total_up
+          - entity: sensor.docker_splunk_network_total_down
+      - type: entities
+        entities:
+          - entity: switch.docker_splunk
+            name: Splunk
+          - entity: sensor.docker_splunk_image
+            name: Image
+          - entity: sensor.docker_splunk_status
+            name: Status
+
+  - type: 'custom:vertical-stack-in-card'
+    title: Portainer
+    cards:
+      - type: horizontal-stack
+        cards:
+          - type: gauge
+            entity: sensor.docker_portainer_cpu
+            min: 0
+            max: 100
+            name: CPU (Cores)
+            severity:
+              green: 0
+              yellow: 20
+              red: 40
+          - type: gauge
+            entity: sensor.docker_portainer_1cpu
+            min: 0
+            max: 100
+            name: CPU (Overall)
+            severity:
+              green: 0
+              yellow: 20
+              red: 40
+          - type: gauge
+            entity: sensor.docker_portainer_memory_percent
+            min: 0
+            max: 100
+            name: Memory
+            severity:
+              green: 0
+              yellow: 20
+              red: 40
+      - type: glance
+        show_name: false
+        entities:
+          - entity: sensor.docker_portainer_memory
+          - entity: sensor.docker_portainer_network_speed_up
+          - entity: sensor.docker_portainer_network_speed_down
+          - entity: sensor.docker_portainer_network_total_up
+          - entity: sensor.docker_portainer_network_total_down
+      - type: entities
+        entities:
+          - entity: switch.docker_portainer
+            name: Portainer
+          - entity: sensor.docker_portainer_image
+            name: Image
+          - entity: sensor.docker_portainer_status
+            name: Status
+
   - type: custom:vertical-stack-in-card
     title: UDM-PRO
     cards:
