--- a/config/dashboards/ui-primary/views/security.yaml
+++ b/config/dashboards/ui-primary/views/security.yaml
@@ -25,6 +25,9 @@ cards:
         cards:
           - type: glance
             entities:
+              - entity: binary_sensor.zw_gun_safe_sensor
+                name: Gun safe
+                show_last_changed: true
               - entity: cover.ryobi_gdo_door_74daea881296
                 name: Garage 1
                 show_last_changed: true
