Add batteries tab

--- a/config/dashboards/ui-primary/dashboard.yaml
+++ b/config/dashboards/ui-primary/dashboard.yaml
@@ -6,4 +6,5 @@ views:
   - !include views/security.yaml
   - !include ../common-views/climate.yaml
   - !include views/tech.yaml
+  - !include views/batteries.yaml
   - !include ../common-views/printer.yaml
