Replace patio light

--- a/config/dashboards/ui-primary/views/main.yaml
+++ b/config/dashboards/ui-primary/views/main.yaml
@@ -319,7 +319,7 @@ cards:
       - type: horizontal-stack
         cards:
           - type: button
-            entity: switch.zw_patio_light
+            entity: light.patio_lights
             hold_action:
               action: more-info
             icon: 'mdi:coach-lamp'
