--- a/config/dashboards/ui-primary/views/security.yaml
+++ b/config/dashboards/ui-primary/views/security.yaml
@@ -28,10 +28,10 @@ cards:
               - entity: binary_sensor.zw_gun_safe_sensor
                 name: Gun safe
                 show_last_changed: true
-              - entity: cover.ryobi_gdo_door_74daea881296
+              - entity: binary_sensor.zw_garage_door_1_sensor
                 name: Garage 1
                 show_last_changed: true
-              - entity: cover.ryobi_gdo_door_d4f513d93753
+              - entity: binary_sensor.zw_garage_door_2_sensor
                 name: Garage 2
                 show_last_changed: true
 
