--- a/config/dashboards/ui-minimal/views/main.yaml
+++ b/config/dashboards/ui-minimal/views/main.yaml
@@ -168,7 +168,7 @@ cards:
               action: toggle
 
           - type: button
-            entity: switch.flood_garage
+            entity: switch.zw_garage_floodlight
             hold_action:
               action: more-info
             icon: 'mdi:car-light-high'
