--- a/config/dashboards/ui-primary/views/tech.yaml
+++ b/config/dashboards/ui-primary/views/tech.yaml
@@ -59,6 +59,46 @@ cards:
             name: Status
 
   - type: 'custom:vertical-stack-in-card'
+    title: CyberPower UPS
+    cards:
+      - type: horizontal-stack
+        cards:
+          - type: gauge
+            entity: sensor.ups_load
+            min: 0
+            max: 100
+            needle: true
+            name: Load
+            severity:
+              green: 0
+              yellow: 75
+              red: 90
+          - type: gauge
+            entity: sensor.ups_input_voltage
+            min: 0
+            max: 130
+            name: Input
+            needle: true
+            severity:
+              green: 0
+              yellow: 122
+              red: 126
+
+      - type: horizontal-stack
+        cards:
+          - type: glance
+            show_name: false
+            entities:
+              - entity: sensor.ups_battery_runtime
+              - entity: sensor.ups_battery_charge
+              - entity: sensor.ups_output_voltage
+
+      - type: entities
+        entities:
+          - entity: sensor.ups_status
+            name: Status
+
+  - type: 'custom:vertical-stack-in-card'
     title: Portainer
     cards:
       - type: horizontal-stack
